<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_exposed_file" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
        	android:onClick="refresh_image_display" />

    </LinearLayout>

    <TextView
        android:id="@+id/current_image_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;please refresh>"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/select_image_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_new_image"
        android:onClick="select_new_image" />

    <Button
        android:id="@+id/unbind_image_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_image"
        android:onClick="unbind_image" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:singleLine="false"
        android:text="@string/notes" />

</LinearLayout>